--- a/server/package.json
+++ b/server/package.json
@@ -7,9 +7,9 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
+    "cors": "^2.8.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "^4.16.2",
     "http-errors": "~1.6.3",
     "mysql": "^2.17.1"
   },
